Tweaked test site

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section>
-      <h1>Here's our test page!</h1>
+      <h1>Here's our test page</h1>
       <h2>It's got a few requests for different file types, too!</h2>
     </section>
   </body>
